fix: componemte audit